--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "print": "ts-node src/Print.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
